# carbon-aware-scheduler

./: .gitignore  Earthfile  README.md  dockerfile  gcp_infrastructure.tf  pyproject.toml
carbon-aware-api-client/: pyproject.toml  setup.py
carbon-aware-api-client/docs/: CarbonIntensityBatchParametersDTO.md  CarbonIntensityDTO.md  EmissionsData.md  EmissionsForecastBatchParametersDTO.md  EmissionsForecastDTO.md  Location.md  LocationsApi.md  ValidationProblemDetails.md
carbon-aware-api-client/openapi_client/: configuration.py  exceptions.py  rest.py
carbon-aware-api-client/openapi_client/api/: __init__.py  carbon_aware_api.py  locations_api.py
carbon-aware-api-client/openapi_client/models/: __init__.py  carbon_intensity_batch_parameters_dto.py  carbon_intensity_dto.py  emissions_data.py  emissions_data_dto.py  emissions_forecast_dto.py  location.py  validation_problem_details.py
carbon-aware-api-client/test/: test_carbon_intensity_batch_parameters_dto.py  test_carbon_intensity_dto.py  test_emissions_data.py  test_emissions_data_dto.py  test_emissions_forecast_dto.py  test_locations_api.py  test_validation_problem_details.py
src/: example-task-scheduler.py  job.py
src/lib/: executer.py  pub_sub.py  scheduler.py  task.py  tasks_db.py
src/lib/carbon-aware-api-client/: README.md
src/lib/carbon-aware-api-client/docs/: CarbonAwareApi.md  EmissionsDataDTO.md
src/lib/carbon-aware-api-client/openapi_client/: __init__.py  api_client.py  example.py
src/lib/carbon-aware-api-client/test/: test_carbon_aware_api.py  test_emissions_forecast_batch_parameters_dto.py  (+1 more)
(+1 files in other folders)
